--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       listens for theme update messages from the parent page and applies them.
     -->
     <link defer rel="import" href="../px-dark-theme/px-dark-theme-styles.html">
-    <link defer rel="import" href="../px-dark-demo-theme/px-dark-demo-theme-styles.html">
+    <!-- <link defer rel="import" href="../px-dark-demo-theme/px-dark-demo-theme-styles.html"> -->
     <link defer rel="import" href="../px-demo/px-demo-theme-switcher.html"/>
     <px-demo-theme-switcher-frame id="themeMessenger" origin="https://www.predix-ui.com"></px-demo-theme-switcher-frame>
     <px-demo-theme-switcher id="themeSwitcher"></px-demo-theme-switcher>
