--- a/demo/og-gdp-chart-demo.html
+++ b/demo/og-gdp-chart-demo.html
@@ -275,7 +275,7 @@
             "axisColor": "#c1c0c0",
             "tickColor": "#c1c0c0",
             "dotRadius": 2,
-            "interpolation": "curveCardinal",
+            "interpolation": "curveBasis",
             "bands": {
               "1": {
                 "color": "steelblue",
