--- a/og-gdp-chart.html
+++ b/og-gdp-chart.html
@@ -43,14 +43,22 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
         </div>
       </div>
       <div class="flex flex--col">
-        <div class="epsilon weight--bold title">Gamma</div>
-        <div id="gammaChart"></div>
-
-        <div class="epsilon weight--bold title">Density</div>
-        <div id="densityChart"></div>
-
-        <div class="epsilon weight--bold title">Porosity</div>
-        <div id="porosityChart"></div>
+        <div class="flex flex--row">
+          <div class="u-1/3">
+            <div class="epsilon weight--bold title">Gamma</div>
+            <div id="gammaChart"></div>
+          </div>
+  
+          <div class="u-1/3">
+            <div class="epsilon weight--bold title">Density</div>
+            <div id="densityChart"></div>
+          </div>
+  
+          <div class="u-1/3">
+            <div class="epsilon weight--bold title">Porosity</div>
+            <div id="porosityChart"></div>
+          </div>
+        </div>
       </div>
     </div>
   </template>
