--- a/og-gdp-chart.html
+++ b/og-gdp-chart.html
@@ -26,10 +26,10 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
 <dom-module id="og-gdp-chart">
   <template>
     <style include="og-gdp-chart-styles"></style>
-    <div class="flex flex--col chart-container" id="charts">
-      <div class="flex flex--row">
+    <div class="flex flex--col chart-container" id="charts" style$="background-color:[[backgroundColor]]">
+      <div class="flex flex--row u-pt++ u-2/3">
         <div class$="flex flex--[[legendAlignment]] legend u-5/6">
-          <div class="flex flex--row">
+          <div class="flex flex--wrap">
             <template is="dom-repeat" items="[[_bands]]" index-as="idx" as="item">
               <div class="flex flex__item flex--col u-pr++ zeta legend-unit" 
                 style$="border-color: [[item.color]]">
@@ -42,7 +42,7 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
             </div>
           </div>
         </div>
-        <div class="flex flex--right">
+        <div class="flex flex--right u-1/3">
           Historical <px-toggle id="historicalToggle" checked></px-toggle>
         </div>
       </div>
