--- a/og-gdp-chart.html
+++ b/og-gdp-chart.html
@@ -27,7 +27,7 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
   <template>
     <style include="og-gdp-chart-styles"></style>
     <div class="flex flex--col chart-container" id="charts" style$="background-color:[[backgroundColor]]">
-      <div class="flex flex--row u-pt++ u-2/3">
+      <div class="flex flex--row u-pt++ u-1/1">
         <div class$="flex flex--[[legendAlignment]] legend u-5/6">
           <div class="flex flex--wrap">
             <template is="dom-repeat" items="[[_bands]]" index-as="idx" as="item">
@@ -42,7 +42,7 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
             </div>
           </div>
         </div>
-        <div class="flex flex--right u-1/3">
+        <div class="flex flex--center u-1/6">
           Historical <px-toggle id="historicalToggle" checked></px-toggle>
         </div>
       </div>
