--- a/og-gdp-chart.html
+++ b/og-gdp-chart.html
@@ -54,7 +54,7 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
           </div>
   
           <div class="u-1/3">
-            <div class="epsilon weight--bold title">Density</div>
+            <div class="epsilon weight--bold title">Resistivity</div>
             <div id="densityChart"></div>
           </div>
   
