--- a/og-gdp-chart.html
+++ b/og-gdp-chart.html
@@ -43,7 +43,7 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
           </div>
         </div>
         <div class="flex flex--center u-1/6">
-          Historical <px-toggle id="historicalToggle" checked></px-toggle>
+          WellBore1 (Historical) <px-toggle id="historicalToggle" checked></px-toggle>
         </div>
       </div>
       <div class="flex flex--col">
