fixing some issues

--- a/og-gdp-chart.html
+++ b/og-gdp-chart.html
@@ -28,7 +28,7 @@
         </div>
         <div class="flex flex--center u-1/6">
           WellBore1 (Historical)
-          <px-toggle id="historicalToggle" checked="checked"></px-toggle>
+          <px-toggle id="historicalToggle" checked="checked" style="margin-right:4em;"></px-toggle>
         </div>
       </div>
       <div class="flex flex--col">
